--- a/localisation/english/romania_l_english.yml
+++ b/localisation/english/romania_l_english.yml
@@ -9,3 +9,5 @@ ROM_generatia_egalitatii_desc:0 "§YGeneratia Egalitatii§! (Equality Generation
 
 ### TOOLTIPS ###
 ROM_petrikovshchina_idea_tt:0 "§tRising dissatisfaction with the current political and economic order is generating anxieties regarding the stability of the Romanian communist regime.§!"
+
+### EVENTS ###
